# Order-Management-agent

./: .env.example  .gitignore  alembic.ini  app_start.sh  config.py  custom_hooks.py  docker-compose.yaml  main.py  pyproject.toml
database_migrations/: env.py
database_migrations/versions/: 2025_09_30_0548-e67a5d952e34_add_initial_necessary_tables.py  2025_10_16_0732-36b555d3f40e_remove_unique_constraint_from_session_.py  2025_10_17_0600-d08799c65f89_add_tbl_user_chat_requests.py
docker/api/: Dockerfile
docker/localstack/: init-resources.sh
models/pydantic/: chat.py
src/: config.py  database.py  main.py  pii_masking_hook.py  pii_safe_agent.py  utils.py
src/adapters/sensitive_data_cache/: redis.py
src/agent/: agent_factory.py  agent_port.py  agent_service.py  dependencies.py
src/agent/custom_hooks/: __init__.py  sensitive_data_masking_hook.py
src/agent/custom_repository/: sqlalchemy_repository.py
src/chat/: chat_port.py  chat_service.py
src/context/: dependencies.py  request_context.py
src/models/database/: __init__.py  base.py  session_agent.py  session_agent_message.py  user_request.py  user_session.py
src/models/pydantic/: __init__.py  sensitive_data_analyzer.py  sensitive_data_anonymizer.py
src/routers/: __init__.py  chat.py  dependencies.py  user_session.py
src/sensitive_data_handler/: data_handler_service.py
src/sensitive_data_handler/adapters/: presidio_analyzer.py  presidio_anonymizer.py  redis_cache.py
src/sensitive_data_handler/ports/: data_analyzer_port.py  data_anonymizer_port.py  data_cache_port.py  data_handler_port.py
src/user_session/: user_session_port.py  user_session_service.py
