[project]
name = "strands"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajesh Muthusamy",email = "rajesh.muthusamy@mallow-tech.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "strands-agents (==1.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "presidio-anonymizer (>=2.2.359,<3.0.0)",
    "presidio-analyzer (>=2.2.359,<3.0.0)",
    "openai (>=1.100.1,<2.0.0)",
    "strands-agents-tools (==0.2.3)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



