[project]
name = "strands"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajesh Muthusamy",email = "rajesh.muthusamy@mallow-tech.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "presidio-anonymizer (>=2.2.359,<3.0.0)",
    "presidio-analyzer (>=2.2.359,<3.0.0)",
    "openai (>=1.100.1,<2.0.0)",
    "strands-agents (>=1.8.0,<2.0.0)",
    "spacy (>=3.8.0,<3.9.0)",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "redis (>=6.4.0,<7.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "opentelemetry-distro (>=0.58b0,<0.59)",
    "opentelemetry-exporter-otlp (>=1.37.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-asgi (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-logging (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-requests (>=0.58b0,<0.59)",

]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



